--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Tera</title>
-  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/93d3e68bd0.js" crossorigin="anonymous"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
-<body>
+<body class="jumbotron animate__animated animate__fadeIn animate__slow">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
